# test_jules_with_rust

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  Rocket.toml
.github/workflows/: autobuild.yml  ci.yml
deployment/: apache.conf  nginx.conf
migrations/: V1__create_users_and_tasks.sql  V2__seed_admin_user.sql
scripts/: autobuild.sh
src/: main.rs
static/js/: main.js
templates/: 403.html.tera  404.html.tera  500.html.tera  edit.html.tera  index.html.tera  landing.html.tera  login.html.tera  view.html.tera
templates/user_admin/: edit.html.tera  index.html.tera  new.html.tera
tests_ui/: test_expired.py  test_sorting.py  test_urgency.py
