[package]
name = "rocket-sqlite-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["sqlite_pool"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
